--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 
 /* zocial */
 [class*="zocial-"]:before {
-    color: black;
+    color: white;
     font-family: 'zocial', sans-serif;
     text-shadow: 3px 3px 3px #aaa;
     width: 2em;
@@ -20,10 +20,12 @@ body {
     font-weight: 400;
     font-size: 16px;
     color: #2d3c49;
+    margin-bottom: 70px;
 }
 
 img {
     max-width: 100%;
+    width: 100%;
 }
 
 /*
@@ -80,10 +82,15 @@ hr {
 /*
 * Footer
 */
-.copyright {
-    float: left;
+.navbar .nav li {
+    display: inline-block;
+    float: none;
 }
 
-.social a {
-    padding-right: 10px;
+.navbar .nav {
+    text-align: center;
+}
+
+.navbar-text {
+    float: none;
 }
