--- a/css/media.css
+++ b/css/media.css
@@ -9,3 +9,10 @@
         font-size: 50px;
     }
 }
+
+@media screen and (max-width: 767px) {
+    .navbar-text {
+        margin-right: 15px;
+        margin-left: 15px;
+    }
+}
